CHANGES
*******

0.8 (unreleased)
================

- Moved the injection of resources from hurry.zoperesource to
  hurry.resource.wsgi.

- No need to plug a custom request/response object into the zope publisher
  any longer.

- Replaced zope.app.testing/zope.app.zcmlfiles test setup with zope.app.wsgi.

0.7 (2010-10-01)
================

- Created ResourceDirectories now are registered for ``IBrowserRequest`` the
  base class of the previously used ``IDefaultBrowserLayer``. So this
  package can be used when the layer used by the application does not extend
  ``IDefaultBrowserLayer``, as e. g. `z3c.layer.pagelet` does.


0.6 (2010-07-29)
================

* Update to work with hurry.resource 0.10 and later. This uses the
  entry point mechanism to configure any libraries.

  Note that this needs hurry.resource-based packages that themselves
  have been updated to hurry.resource 0.10's way of defining an entry
  point and including the resource path in the library. See the
  `hurry.resource documentation
  <http://pypi.python.org/pypi/hurry.resource>`_ for more information.

0.5 (2010-07-24)
================

* Drop the zope.app.component dependency.

* Register the ILibraryUrl adapter for ILibrary instead of Library,
  to be less specific for the adapter lookup.

* Clearly specify license as ZPL.

0.4 (2009-12-16)
================

* Updated required packages.

* Use a newer version of hurry.resource which can insert the snippets
  into HTML itself.

0.3 (2008-12-05)
================

* ``resource.need()`` needed a request object set up in order to
  function.  This is rather annoying in tests, which often don't have
  a request object set up. We now instead return a dummy
  ``NeededResources`` object in such cases (which will then be thrown
  away). As a result, it's always safe to call ``resource.need()``
  during tests, though if no request can be found it will have no
  effect.

0.2 (2008-10-13)
================
